# auro-practicals

./: turtlebot3_fsm.py
assessment/: package.xml  setup.cfg  setup.py
assessment/assessment/: home_zone_sensor.py  item_manager.py  item_sensor.py  robot_sensor.py
assessment/config/: initial_poses.yaml  rviz_windows.yaml
assessment/launch/: assessment_launch.py  bringup_launch.py  gzserver.launch.py  rviz_launch.py  spawn_robot_launch.py
assessment/maps/: assessment_world.pgm  assessment_world.yaml
assessment/models/assessment_world/: model.config  model.sdf
assessment/models/item/: model.config  model.sdf
assessment/models/waffle_pi/: model.config  model.sdf
assessment/models/waffle_pi_common/: model.config
assessment/models/waffle_pi_sensors/: model.config  model.sdf
assessment/params/: nav2_params_namespaced.yaml
assessment/rviz/: namespaced.rviz  namespaced_nav2.rviz
assessment/worlds/: assessment_world.world
assessment_interfaces/: CMakeLists.txt  package.xml
assessment_interfaces/msg/: HomeZone.msg  Item.msg  ItemHolder.msg  ItemHolders.msg  ItemList.msg  ItemLog.msg  Robot.msg  RobotList.msg
auro_interfaces/: CMakeLists.txt  package.xml
auro_interfaces/msg/: Item.msg  ItemList.msg  StringWithPose.msg
gazebo_ros_pkgs/gazebo_plugins/: CMakeLists.txt  package.xml
gazebo_ros_pkgs/gazebo_plugins/include/gazebo_plugins/: gazebo_ros_item_manager.hpp
gazebo_ros_pkgs/gazebo_plugins/src/: gazebo_ros_diff_drive.cpp  gazebo_ros_item_manager.cpp
solution/: package.xml  setup.cfg  setup.py
solution/config/: custom_rviz_windows.yaml
solution/launch/: solution_launch.py  solution_launch_nav2.py  solution_nav2_launch.py
solution/params/: custom_nav2_params_namespaced.yaml
solution/solution/: data_logger.py  robot_controller.py
solution_interfaces/: CMakeLists.txt  package.xml
tf_relay/tf_relay/: main.py  tf_relay.py  tf_static_relay.py
week_1/: package.xml  setup.cfg  setup.py
week_1/week_1/: turtle_controller.py  turtle_listener.py
week_2/: package.xml  setup.cfg  setup.py
week_2/week_2/: turtlebot3_drive_python.py
week_3/: package.xml  setup.cfg  setup.py
week_3/launch/: turtlebot3_simulation_launch.py
week_3/week_3/: rviz_text_marker.py  turtlebot3_fsm.py  turtlebot3_random_walk.py
week_4/: package.xml  setup.cfg  setup.py
week_4/launch/: week_4_launch.py
week_4/models/week_4_world/: model.config  model.sdf
week_4/week_4/: robot_controller.py
week_4/worlds/: week_4_world.world
week_5/: package.xml  setup.cfg  setup.py
week_5/models/item/: model.config  model.sdf
week_5/week_5/: item_detector.py  item_spawner.py
week_6/: package.xml  setup.cfg  setup.py
week_6/launch/: rviz_launch.py  spawn_robot_launch.py  week_6_launch.py
week_6/rviz/: namespaced.rviz
week_6/week_6/: lidar_fault.py  robot_controller.py
week_6/worlds/: week_6_world.world
week_7/: package.xml  setup.cfg  setup.py
week_7/launch/: turtlebot3_world_auro.launch.py
week_7/worlds/: turtlebot3_world_auro.world  turtlebot3_world_empty.world
week_8/: package.xml  setup.cfg  setup.py
week_8/launch/: week_8_launch.py  week_8_nav2_launch.py
week_8/maps/: auro_map.pgm  auro_map.yaml
week_8/rviz/: paths.rviz
week_8/urdf/: true_turtlebot3_waffle_pi.urdf
week_8/week_8/: autonomous_navigation.py  autonomous_navigation_multithreaded.py  joint_state_republisher.py  path_publisher.py  robot_controller.py  simple_commander.py
week_8/worlds/: turtlebot3_world_empty.world
(+17 files in other folders)
